fix formatting of home page green background and spacing in store cards

--- a/GlobeAuction/Content/Site.css
+++ b/GlobeAuction/Content/Site.css
@@ -250,6 +250,7 @@ tr.shown td.details-control {
 
 
 .card {
+    padding-top: 16px;
     /* Add shadows to create the "card" effect */
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
